--- a/src/index.css
+++ b/src/index.css
@@ -67,10 +67,10 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-image: url('/cover.png');
-  background-size: 100vw 100vh;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
   z-index: -1;
